[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entities/lasereffects/LaserEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/explosions/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui-game/HealthBar2D.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=8]
radius = 1.87976
height = 2.90376

[node name="Enemy" type="Spatial" groups=["enemies"]]
script = ExtResource( 4 )
auto_kill_percentage = 0.15

[node name="Tween" type="Tween" parent="."]

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShipDetection" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ShipDetection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.71862 )
shape = SubResource( 8 )

[node name="HealthBar2D" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Explosion" parent="." instance=ExtResource( 5 )]

[node name="LaserEffects" parent="." instance=ExtResource( 1 )]
ship = NodePath("..")

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="area_entered" from="ShipDetection" to="." method="_on_ShipDetection_area_entered"]
[connection signal="exploded" from="Explosion" to="." method="_on_Explosion_exploded"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
